# mesh-hop

./: .gitignore  DESKTOP.md  IMPROVEMENT-PLAN.md  IMPROVEMENTS.md  PRODUCT.md  README.md  SECURITY.md  START-PUBLIC.cmd  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/release-notes/: v0.3.3.md  v0.4.0.md
.github/workflows/: ci.yml  nightly-live-probe.yml
desktop-ui/: index.html  vite.config.js
desktop-ui/src/: main.js  styles.css
scripts/: build-sidecar.mjs  enable-windows-signing.ps1  sign-windows.ps1  stage-release.mjs  sync-version.mjs  verify-browser-assets.mjs  verify-windows-signatures.ps1
src/: client.js  coordinator.js  crypto.js  desktop-engine.js  env.js  exit.js  http-upgrade.js  net-policy.js  pair.js  public.js  relay-connection.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/public/: browser.js  network.js  pool.js  probe.js  relay.js  socks-server.js  sources.js  tunnel.js  user-agent.js
test/: coordinator.test.js  crypto.test.js  env.test.js  http-upgrade.test.js  live.test.js  net-policy.test.js  public-live.test.js  public.test.js  socks-server.test.js  throughput.test.js
website/: README.md  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: AnimatedContent.tsx  BlurText.tsx  hero-route.tsx  measurement-scoreboard.tsx  meshhop-window.tsx  pipeline.tsx  site-header.tsx  windows-download-link.tsx
website/src/lib/: release.ts
